# cmake-cookbook

./: .gitignore  CMakeLists.txt
chapter-01/: CMakeLists.txt
chapter-01/recipe-01/c-example/: hello-world.c
chapter-01/recipe-01/cxx-example/: CMakeLists.txt  hello-world.cpp
chapter-01/recipe-03/cxx-example/: hello-world.cpp
chapter-01/recipe-03/cxx-objlib-example/: CMakeLists.txt
chapter-01/recipe-04/cxx-example/: CMakeLists.txt
chapter-01/recipe-05/cxx-example/: CMakeLists.txt
chapter-01/recipe-06/example/: CMakeLists.txt
chapter-01/recipe-07/example/: CMakeLists.txt
chapter-01/recipe-10/cxx-example/: CMakeLists.txt
chapter-02/: CMakeLists.txt
chapter-02/recipe-06/cxx-example/: CMakeLists.txt
chapter-03/: CMakeLists.txt
chapter-03/recipe-01/example/: CMakeLists.txt
chapter-03/recipe-02/c-example/: CMakeLists.txt
chapter-03/recipe-06/cxx-example/: CMakeLists.txt
chapter-04/: CMakeLists.txt
chapter-04/recipe-01/cxx-example/: CMakeLists.txt
chapter-05/: CMakeLists.txt
chapter-05/recipe-01/cxx-example/: CMakeLists.txt
chapter-05/recipe-04/cxx-example/: CMakeLists.txt
chapter-05/recipe-08/c-example/: CMakeLists.txt
chapter-06/: CMakeLists.txt
chapter-06/recipe-01/fortran-c-example/: CMakeLists.txt
chapter-06/recipe-02/fortran-c-example/: CMakeLists.txt
chapter-06/recipe-03/cxx-example/: generate.py
chapter-06/recipe-05/cxx-example/: CMakeLists.txt  VERSION
chapter-07/: CMakeLists.txt
chapter-07/recipe-01/cxx-example/: CMakeLists.txt
chapter-07/recipe-07/cxx-example/src/evolution/: CMakeLists.txt
chapter-08/: CMakeLists.txt
chapter-09/: CMakeLists.txt
chapter-09/recipe-01/fortran-c-example/: CMakeLists.txt
chapter-09/recipe-02/cxx-example/: CMakeLists.txt
chapter-10/: CMakeLists.txt
chapter-11/: CMakeLists.txt
chapter-11/recipe-01/cxx-example/: CMakeCPack.cmake
chapter-12/: CMakeLists.txt
chapter-12/recipe-01/cxx-example/: CMakeLists.txt
chapter-12/recipe-02/cxx-example/: CMakeLists.txt
chapter-12/recipe-03/cxx-example/: CMakeLists.txt
chapter-13/: CMakeLists.txt
chapter-14/: CMakeLists.txt
chapter-14/recipe-02/cxx-example/src/: CMakeLists.txt
chapter-14/recipe-04/cxx-example/: CMakeLists.txt
