# set minimum cmake version
cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
set(CMAKE_VERBOSE_MAKEFILE on)
#add_subdirectory(recipe-01/c-example)
#add_subdirectory(recipe-01/cxx-example)
#add_subdirectory(recipe-02/c-example)
#add_subdirectory(recipe-02/cxx-example)
#add_subdirectory(recipe-03/cxx-example)
#add_subdirectory(recipe-03/cxx-objlib-example)
#add_subdirectory(recipe-04/cxx-example)
#add_subdirectory(recipe-05/cxx-example)
#add_subdirectory(recipe-06/example)
#add_subdirectory(recipe-07/example)
#add_subdirectory(recipe-08/cxx-example)
#add_subdirectory(recipe-09/cxx-example)
add_subdirectory(recipe-10/cxx-example)