# set minimum cmake version
cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
#set(CMAKE_VERBOSE_MAKEFILE on)
#add_subdirectory(recipe-01/example)
#add_subdirectory(recipe-02/c-example)
#add_subdirectory(recipe-03/cxx-example)
#add_subdirectory(recipe-04/cxx-example)
#add_subdirectory(recipe-05/cxx-example)
#add_subdirectory(recipe-05/cxx-example-3.5)
#add_subdirectory(recipe-06/c-example)
#add_subdirectory(recipe-06/c-example-3.5)
#add_subdirectory(recipe-06/cxx-example)
#add_subdirectory(recipe-07/cxx-example)
#add_subdirectory(recipe-08/cxx-example)
#add_subdirectory(recipe-09/c-example)
add_subdirectory(recipe-10/c-example)
